--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <script src="processing.js"></script>
-<canvas data-processing-sources="https://raw.githubusercontent.com/rachelwigell/KinestheticMath/gh-pages/sketch_150309a.pde"></canvas>
+<canvas data-processing-sources="https://rawgit.com/rachelwigell/KinestheticMath/gh-pages/sketch_150309a.pde"></canvas>
