please work this time

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<script src="https://rawgit.com/rachelwigell/KinestheticMath/gh-pages/processing.js"></script>
-<canvas data-processing-sources="https://rawgit.com/rachelwigell/KinestheticMath/gh-pages/sketch_150309a.pde"></canvas>
+<script src="http://rachelwigell.github.io/KinestheticMath/processing.js"></script>
+<canvas data-processing-sources="http://rachelwigell.github.io/KinestheticMath/sketch_150309a.pde"></canvas>
