learning to connect multiple classes in processing.js

--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <script src="http://rachelwigell.github.io/KinestheticMath/processing.js"></script>
-<canvas data-processing-sources="http://rachelwigell.github.io/KinestheticMath/main/main.pde"></canvas>
+<canvas data-processing-sources="
+http://rachelwigell.github.io/KinestheticMath/main/AdditionClass.pde
+http://rachelwigell.github.io/KinestheticMath/main/MultiplicationClass.pde
+http://rachelwigell.github.io/KinestheticMath/main/VariableClass.pde
+http://rachelwigell.github.io/KinestheticMath/main/ConstantClass.pde
+http://rachelwigell.github.io/KinestheticMath/main/OperatorClass.pde
+http://rachelwigell.github.io/KinestheticMath/main/EquationClass.pde
+http://rachelwigell.github.io/KinestheticMath/main/main.pde"></canvas>
