because char does not exist in javascript, had to replace all these instances with strings. the chars otherwise display as their ascii values.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8">
 <script src="http://rachelwigell.github.io/KinestheticMath/processing.js"></script>
 <canvas data-processing-sources="
 http://rachelwigell.github.io/KinestheticMath/main/AdditionClass.pde
